<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:gravity="center_horizontal"
              android:layout_gravity="center"
              android:padding="20dp">

	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dp"
			style="@style/TextStyleTitle"
			android:text="@string/hint_no_nfc_device" />

	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dp"
			android:textColor="@color/activity_text"
			android:textSize="22sp"
			android:text="@string/can_not_use_all_function" />

	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dp"
			style="@style/TextStyleDetailSecondary"
			android:text="@string/please_wait_for_new_version" />

	<ImageView
			android:layout_width="120dp"
			android:layout_height="120dp"
			android:layout_margin="20dp"
			android:src="@drawable/sorry" />

	<Button
			android:id="@+id/btn_I_know"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:minHeight="0dp"
			android:minWidth="0dp"
			android:paddingTop="8dp"
			android:paddingBottom="8dp"
			android:paddingLeft="20dp"
			android:paddingRight="20dp"
			android:background="@drawable/btn_red_corner_selector"
			style="@style/TextStyleTitle"
			android:textColor="@color/white"
			android:text="@string/I_know" />
</LinearLayout>