<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@color/white"
              android:orientation="vertical"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin">


    <EditText
        android:id="@+id/edit_user_tel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:ems="10"
        android:hint="@string/hint_reg_account"
        android:inputType="number"
        android:singleLine="true">
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/edit_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="4"
            android:ems="10"
            android:hint="@string/hint_reg_code"
            android:inputType="number"
            android:singleLine="true">
        </EditText>

        <Button
            android:id="@+id/btnSendMsg"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:background="@drawable/btn_red_corner_selector"
            android:text="@string/btn_reg_send_code"
            android:textColor="@color/white"
            android:textSize="18sp"/>
    </LinearLayout>


    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:ems="10"
        android:hint="@string/hint_reg_pwd"
        android:inputType="textPassword"
        android:singleLine="true">
    </EditText>


    <EditText
        android:id="@+id/edit_re_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:ems="10"
        android:hint="@string/hint_reg_re_pwd"
        android:inputType="textPassword"
        android:singleLine="true">
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="left">

        <CheckBox
            android:id="@+id/check_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"/>

        <TextView
            android:id="@+id/text_login_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lab_login_agreement"
            android:textColor="#3399cc"
            android:textSize="18sp"/>
    </LinearLayout>


    <Button
        android:id="@+id/btn_register"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/btn_red_corner_selector"
        android:text="@string/btn_login_reg"
        android:textColor="@color/white"
        android:textSize="18sp"/>
</LinearLayout>