<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:gravity="center_horizontal">

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="150dp"
			android:layout_alignParentTop="true"
			android:layout_marginTop="30dp"
			android:background="@color/itembackcolor"
			android:orientation="horizontal"
			android:gravity="center_vertical">

		<ImageView
				android:id="@+id/imageView1"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_margin="20dp"
				android:layout_weight="6"
				android:gravity="left|center_vertical"
				android:src="@drawable/xiangji" />

		<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/account" />

		<TextView
				android:id="@+id/textAccount"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="4"
				android:gravity="center_vertical"
				android:textSize="18sp" />
	</LinearLayout>

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="50dp"
			android:layout_marginTop="25dp"
			android:orientation="horizontal"
			android:background="@color/itembackcolor"
			android:gravity="center_vertical">

		<ImageView
				android:layout_width="0dp"
				android:layout_height="32dp"
				android:layout_weight="1"
				android:src="@drawable/xiugai" />

		<TextView
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="3"
				android:text="@string/change_pwd"
				android:textSize="18sp" />

		<ImageView
				android:layout_width="0dp"
				android:layout_height="30dp"
				android:layout_weight="1"
				android:src="@drawable/more" />

	</LinearLayout>

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="50dp"
			android:orientation="horizontal"
			android:background="@color/itembackcolor"
			android:gravity="center_vertical">

		<ImageView
				android:layout_width="0dp"
				android:layout_height="32dp"
				android:layout_weight="1"
				android:src="@drawable/bangzhu" />

		<TextView
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="3"
				android:text="@string/help"
				android:textSize="18sp" />

		<ImageView
				android:layout_width="0dp"
				android:layout_height="30dp"
				android:layout_weight="1"
				android:src="@drawable/more" />

	</LinearLayout>

	<Button
			android:id="@+id/btnExit"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:minHeight="0dp"
			android:paddingTop="8dp"
			android:layout_marginTop="80dp"
			android:layout_marginLeft="@dimen/activity_vertical_margin"
			android:layout_marginRight="@dimen/activity_vertical_margin"
			android:paddingBottom="8dp"
			android:layout_gravity="center_horizontal"
			style="@style/ConfirmButton"
			android:text="@string/exit"
			android:textSize="18sp" />

</LinearLayout>